[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/Lava/lava.png" type="Texture" id=1]
[ext_resource path="res://Entities/Lava/Lava.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Lava" type="Area2D" groups=[
"Lava",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCastLeft" type="RayCast2D" parent="RayCasts"]
enabled = true
cast_to = Vector2( -18, 0 )

[node name="RayCastRight" type="RayCast2D" parent="RayCasts"]
enabled = true
cast_to = Vector2( 18, 0 )

[node name="RayCastUp" type="RayCast2D" parent="RayCasts"]
enabled = true
cast_to = Vector2( 0, -18 )

[node name="RayCastBottom" type="RayCast2D" parent="RayCasts"]
enabled = true
cast_to = Vector2( 0, 18 )
